@@ -92,6 +92,7 @@ namespace
 	const core::stringc instanceMaterialName = "instance_material";
 	const core::stringc instanceLightName =    "instance_light";
 	const core::stringc instanceNodeName =     "instance_node";
+	const core::stringc instanceCameraName =   "instance_camera";
 	const core::stringc bindMaterialName =     "bind_material";
 	const core::stringc extraNodeName =        "extra";
 	const core::stringc techniqueNodeName =    "technique";
@@ -254,7 +255,7 @@ namespace
 			os::Printer::log("COLLADA: Constructing camera instance", Id.c_str(), ELL_DEBUG);
 			#endif
 
-			scene::ICameraSceneNode* c = mgr->addCameraSceneNode(parent);
+			scene::ICameraSceneNode* c = mgr->addCameraSceneNode(parent, core::vector3df(0,0,0), core::vector3df(0,0,100), -1, false);
 			if (c)
 			{
 				c->setFOV(YFov);
@@ -789,7 +790,9 @@ void CColladaFileLoader::readNodeSection(io::IXMLReaderUTF8* reader, scene::ISce
 			if ((instanceName == reader->getNodeName()) ||
 				(instanceNodeName == reader->getNodeName()) ||
 				(instanceGeometryName == reader->getNodeName()) ||
-				(instanceLightName == reader->getNodeName()))
+				(instanceLightName == reader->getNodeName()) ||
+				(instanceCameraName == reader->getNodeName())
+				)
 			{
 				scene::ISceneNode* newnode = 0;
 				readInstanceNode(reader, parent, &newnode, nodeprefab, reader->getNodeName());
